# supply_chain

./: Cargo.toml  README.md  package-lock.json  package.json
backend/: .env  Cargo.toml
backend/src/: db.rs  main.rs  models.rs  routes.rs
backend/src/db/: entities.rs  mod.rs  signature.rs
backend/src/routes/: auth.rs  company.rs  customer.rs  hospital.rs  mod.rs  tracker.rs
backend/src/utils/: merkle.rs
blockchain projects/supply chain/: Cargo.toml
blockchain projects/supply chain/src/: main.rs
frontend/vite-project/: .gitignore  package-lock.json  package.json
frontend/vite-project/src/: App.tsx
frontend/vite-project/src/components/: batchable.tsx  batchtracker.tsx  companyform.tsx  customer.tsx  hospitalform.tsx  trackerinput.tsx
frontend/vite-project/src/context/: AuthContext.tsx
frontend/vite-project/src/pages/: home.css  home.tsx  login.css  login.tsx  signup.css  signup.tsx
frontend/vite-project/src/pages/dashboardpages/: companydashboard.tsx
src/: main.rs
