[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
sha2 = "0.10"
rsa = "0.9"
rand = "0.8"
base64 = "0.21"
